# project-forge-3d

./: .gitignore  README.md  setup.sh
.cursor/plans/: 3d_reconstruction_pipeline_infrastructure_5a196f4e.plan.md
cpp/: CMakeLists.txt  build.sh
cpp/include/forge_engine/: CircularBuffer.hpp  DepthBuffer.hpp  FrameProcessor.hpp  Model3D.hpp
cpp/src/: DepthBuffer.cpp  FrameProcessor.cpp  Model3D.cpp  pybind_module.cpp
docs/: ALGORITHM.md
mobile/: README.md  build_and_install.sh  build_apk.sh  pubspec.yaml  quick_setup.sh  setup.sh
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/kotlin/com/example/forge_3d_mobile/: MainActivity.kt
mobile/android/app/src/main/res/xml/: network_security_config.xml
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/isolates/: camera_stream_isolate.dart
mobile/lib/screens/: pairing_screen.dart
mobile/lib/services/: pairing_service.dart  session_manager.dart  websocket_service.dart
mobile/linux/: CMakeLists.txt
mobile/linux/runner/: my_application.cc
mobile/macos/Runner.xcodeproj/: project.pbxproj
mobile/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
mobile/macos/Runner/Configs/: AppInfo.xcconfig
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
mobile/windows/runner/: Runner.rc  main.cpp
server/: __init__.py  main.py  pairing.py  requirements.txt  run.sh  ui.py
server/templates/: pairing.html
